--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <head>
 
 	<meta charset="utf-8" />
-	<title data-i18n="title"></title>
+	<title data-i18n="logintitle"></title>
 	<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'>
 	<meta name='apple-mobile-web-app-capable' content='yes'>
 	<meta name='apple-mobile-web-app-status-bar-style' content='black'>
 	<meta name='format-detection' content='telephone=no'>
 	<link rel="stylesheet" type="text/css" href="src/css/style.css">
+	<script src="https://recaptcha.net/recaptcha/api.js" async defer></script>
 </head>
 
 <body>
@@ -17,18 +18,19 @@
 	<div class="logBox">
 	<form action="javascript:login();">
 		<h1><img src="https://logos.nmteam.agou.im/nmTeam/logo@32.png"><t data-i18n="loginh"></t></h1>
+		<h2 id="nameBox"></h2>
 		<label for="uname">
 			<t data-i18n="name"></t><input id="uname">
 		</label>
 		<label for="pass">
 			<t data-i18n="password"></t><input id="pass" type="password">
 		</label>
-		
+		<div class="g-recaptcha" data-sitekey="6LcKtjkaAAAAAByRsaSli3V8uteOBKpX6oHDLpeq" id="verBox"></div>
 		<but><label for="recoMe"><input id="recoMe" type="checkbox"><i></i><t data-i18n="recoMe"></t></label><button id="login" data-i18n="login"></button></but>
 		<p id="info"></p>
 		<p>
 			<t data-i18n="haveNoAccount0"></t>
-			<a href="reg.html" data-i18n="haveNoAccount1"></a>
+			<a id="changeLoginTypeA" href="reg.html" data-i18n="haveNoAccount1"></a>
 		</p>
 	</form></div>
 	<p id="cr" data-i18n="cr"></p>
