新增 邮箱验证的前端实现；改进 模块化设计，采用微内核，运行效率提升200%（划掉）；改进 reCAPTCHA 在页面上的显示位置；改进 翻译；

--- a/reg.html
+++ b/reg.html
@@ -33,7 +33,7 @@
 			<label for="pass2">
 				<t data-i18n="passwordAgain"></t><input id="pass2" type="password">
 			</label>
-			<div class="g-recaptcha" data-sitekey="6LcKtjkaAAAAAByRsaSli3V8uteOBKpX6oHDLpeq"></div>
+			<recap><div class="g-recaptcha" data-sitekey="6LcKtjkaAAAAAByRsaSli3V8uteOBKpX6oHDLpeq"></div></recap>
 			<but><label for="readNeeds"><input id="readNeeds" type="checkbox"><i></i>
 					<t data-i18n="readNeeds"></t>
 				</label><a href="https://nmteam.ml/legal/network-service-protocol.html"
@@ -55,6 +55,7 @@
 	<script src="src/js/jquery.min.js"></script>
 	<script src="src/js/i18next-1.6.3.min.js"></script>
 	<script src="src/js/main.js"></script>
+	<script src="src/js/log.js"></script>
 	<script src="src/js/language.js"></script>
 
 </body>
