--- a/index.html
+++ b/index.html
@@ -16,29 +16,36 @@
 <body>
 	<div id="bodybg"></div>
 	<div class="logBox">
-	<form action="javascript:login();">
-		<h1><img src="https://logos.nmteam.agou.im/nmTeam/logo@32.png"><t data-i18n="loginh"></t></h1>
-		<h2 id="nameBox"></h2>
-		<label for="uname">
-			<t data-i18n="name"></t><input id="uname">
-		</label>
-		<label for="pass">
-			<t data-i18n="password"></t><input id="pass" type="password">
-		</label>
-		<div class="g-recaptcha" data-sitekey="6LcKtjkaAAAAAByRsaSli3V8uteOBKpX6oHDLpeq" id="verBox"></div>
-		<but><label for="recoMe"><input id="recoMe" type="checkbox"><i></i><t data-i18n="recoMe"></t></label><button id="login" data-i18n="login"></button></but>
-		<p id="info"></p>
-		<p>
-			<t data-i18n="haveNoAccount0"></t>
-			<a id="changeLoginTypeA" href="reg.html" data-i18n="haveNoAccount1"></a>
-		</p>
-	</form></div>
+		<form action="javascript:login();">
+			<h1><img src="https://logos.nmteam.agou.im/nmTeam/logo@32.png">
+				<t data-i18n="loginh"></t>
+			</h1>
+			<h2 id="nameBox"></h2>
+			<label for="uname">
+				<t data-i18n="name"></t><input id="uname">
+			</label>
+			<label for="pass">
+				<t data-i18n="password"></t><input id="pass" type="password">
+			</label>
+			<recap><div class="g-recaptcha" data-sitekey="6LcKtjkaAAAAAByRsaSli3V8uteOBKpX6oHDLpeq" id="verBox"></div></recap>
+			<but><label for="recoMe"><input id="recoMe" type="checkbox"><i></i>
+					<t data-i18n="recoMe"></t>
+				</label><button id="login" data-i18n="login"></button></but>
+			<p id="info"></p>
+			<p>
+				<t data-i18n="haveNoAccount0"></t>
+				<a id="changeLoginTypeA" href="reg.html" data-i18n="haveNoAccount1"></a>
+			</p>
+		</form>
+	</div>
 	<p id="cr" data-i18n="cr"></p>
 
-<script src="src/js/main.js"></script>
-<script src="src/js/jquery.min.js"></script>
-<script src="src/js/i18next-1.6.3.min.js"></script>
-<script src="src/js/language.js"></script>
+	<script src="src/js/jquery.min.js"></script>
+	<script src="src/js/i18next-1.6.3.min.js"></script>
+	<script src="src/js/main.js"></script>
+	<script src="src/js/log.js"></script>
+	<script src="src/js/language.js"></script>
+
 
 </body>
 
