--- a/info.html
+++ b/info.html
@@ -89,8 +89,10 @@
 
 	<script src="src/js/jquery.min.js"></script>
 	<script src="src/js/i18next-1.6.3.min.js"></script>
+	<script src="src/js/main.js"></script>
 	<script src="src/js/info.js"></script>
 	<script src="src/js/language.js"></script>
+
 
 </body>
 
