# nmTeam User Center 更新日志  亲爱的用户，您期盼已久的新版本 nmTeam 用户中心来了！新版本 nmTeam 用户中心是新一代的账户系统，为不同搭载 nmServices 设备的智能化、互联与协同提供了统一的接口，为您带来简捷、流畅、连续、安全可靠的 nmServices 体验。    ## 2021.07.03 ### 新功能 - 新增重置密码功能   - 新增修改密码功能   - 新增修改头像功能   - 新增修改昵称功能   - 新增按钮聚焦反馈  ### 修复和改进 - 根据新后端模式改进邮箱验证功能   - 调整按钮位置   - 改进多语言体验   - 改进语言文件   - 改进 &lt;form&gt; 标签所涵盖的范围  - 改进登录页面跳转注册页面为新窗口 - 改进注册邮件发送后的页面逻辑 - 修复头像非正方形时未铺满的问题 - 修复部分翻译未及时变更的问题 - 修复保存信息后修改密码按钮未出现而保存按钮未消失的问题 - 修正 logout 函数未成功时执行操作错误而未能弹出消息框的问题 - 修正验证邮件页面 &lt;form&gt; 标签有事件 login 的问题   ### 其它 - 提高系统的稳定性   - 优化系统的流畅度
# nmTeam User Center 更新日志

亲爱的用户，您期盼已久的新版本 nmTeam 用户中心来了！新版本 nmTeam 用户中心是新一代的账户系统，为不同搭载 nmServices 设备的智能化、互联与协同提供了统一的接口，为您带来简捷、流畅、连续、安全可靠的 nmServices 体验。

## 2021.07.03
### 新功能
- 新增重置密码功能
- 新增修改密码功能
- 新增修改头像功能
- 新增修改昵称功能
- 新增按钮聚焦反馈

### 修复和改进
- 根据新后端模式改进邮箱验证功能
- 调整按钮位置
- 改进多语言体验
- 改进语言文件
- 改进 &lt;form&gt; 标签所涵盖的范围
- 改进登录页面跳转注册页面为新窗口
- 改进注册邮件发送后的页面逻辑
- 修复头像非正方形时未铺满的问题
- 修复部分翻译未及时变更的问题
- 修复保存信息后修改密码按钮未出现而保存按钮未消失的问题
- 修正 logout 函数未成功时执行操作错误而未能弹出消息框的问题
- 修正验证邮件页面 &lt;form&gt; 标签有事件 login 的问题

### 其它
- 提高系统的稳定性
- 优化系统的流畅度

--- a/activation.html
+++ b/activation.html
@@ -16,7 +16,7 @@
 <body>
 	<div id="bodybg"></div>
 	<div class="logBox">
-		<form action="javascript:login();">
+		<form action="javascript:">
 			<h1><img src="https://logos.nmteam.agou.im/nmTeam/logo@32.png">
 				<t data-i18n="activationh"></t>
 			</h1>
