--- a/reset_password_set.html
+++ b/reset_password_set.html
@@ -4,7 +4,7 @@
 <head>
 
 	<meta charset="utf-8" />
-	<title data-i18n="logintitle"></title>
+	<title data-i18n="resettitle"></title>
 	<meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'>
 	<meta name='apple-mobile-web-app-capable' content='yes'>
 	<meta name='apple-mobile-web-app-status-bar-style' content='black'>
@@ -16,41 +16,33 @@
 <body>
 	<div id="bodybg"></div>
 	<div class="logBox">
-
-		<h1><img src="https://logos.nmteam.agou.im/nmTeam/logo@32.png">
-			<t data-i18n="loginh"></t>
-		</h1>
-		<h2 id="nameBox"></h2>
-		<form action="javascript:login();">
-			<label for="uname">
-				<t data-i18n="name"></t><input id="uname">
-			</label>
+		<form action="javascript:resetPassword();">
+			<h1><img src="https://logos.nmteam.agou.im/nmTeam/logo@32.png">
+				<t data-i18n="reseth"></t>
+			</h1>
+			<h2 id="nameBox" data-i18n="resetnh2"></h2>
 			<label for="pass">
 				<t data-i18n="password"></t><input id="pass" type="password">
 			</label>
-			<recap>
+			<label for="pass2">
+				<t data-i18n="passwordAgain"></t><input id="pass2" type="password">
+			</label>
+			<!-- <recap>
 				<div class="g-recaptcha" data-sitekey="6LcKtjkaAAAAAByRsaSli3V8uteOBKpX6oHDLpeq" id="verBox"></div>
-			</recap>
-			<but><label for="recoMe"><input id="recoMe" type="checkbox"><i></i>
-					<t data-i18n="recoMe"></t>
-				</label><button id="login" data-i18n="login"></button></but>
+			</recap> -->
+			<but><button id="resetn" data-i18n="setNewPassword"></button></but>
+			<p id="info"></p>
+			<p>
+				<t id="resultBox" data-i18n="resetntip"></t><t id="resultErr"></t><br />
+					</p>
 		</form>
-		<p id="info"></p>
-		<p>
-			<t data-i18n="haveNoAccount0"></t>
-			<a id="changeLoginTypeA" target="_blank" href="reg.html" data-i18n="haveNoAccount1"></a>
-			<br />
-			<t data-i18n="forgetPW0"></t>
-			<a id="resetPWA" target="_blank" href="reset_password.html" data-i18n="forgetPW1"></a>
-		</p>
-
 	</div>
 	<p id="cr" data-i18n="cr"></p>
 
 	<script src="src/js/jquery.min.js"></script>
 	<script src="src/js/i18next-1.6.3.min.js"></script>
 	<script src="src/js/main.js"></script>
-	<script src="src/js/log.js"></script>
+	<script src="src/js/reset.js"></script>
 	<script src="src/js/language.js"></script>
 
 
