## 2021.07.07   ### 修复和改进 - 在前端对接服务时改用 URL 参数传输，使得在 Safari 上不能登录的问题得以解决，同时可在同一设备使用不同 nmServices 时登录不同账号。新的返回 URL 将包含用户是否选择长期登录参数及本次生成的 SessionID - nmServices 对接到 info 页面时从 URL 中获取来自对接 nmServices 的 SessionID 参数并保存入 Accounts 的 Cookie，其优先级高于 Accounts 的 Cookie - 在对接后端时在 Cookie 中获取 SessionID 并将其包含在 GET 中 - 取消了如果有 Cookie 记录则自动跳转的逻辑，而改为如果 Accounts 本地有用户之前登录其它服务或访问 Accounts Center 时产生的 Cookie 记录，则询问用户是否用此账户继续登录 - 在 getInfo 中，自动从 URL 中 获取来自 Accounts Center 的 SessionID 参数并保存入接入 nmServices（包括 Accounts 的 info 页面）的 Cookie  ### 其它 - 提高系统的稳定性   - 优化系统的流畅度
## 2021.07.07
### 修复和改进
- 在前端对接服务时改用 URL 参数传输，使得在 Safari 上不能登录的问题得以解决，同时可在同一设备使用不同 nmServices 时登录不同账号。新的返回 URL 将包含用户是否选择长期登录参数及本次生成的 SessionID
- nmServices 对接到 info 页面时从 URL 中获取来自对接 nmServices 的 SessionID 参数并保存入 Accounts 的 Cookie，其优先级高于 Accounts 的 Cookie
- 在对接后端时在 Cookie 中获取 SessionID 并将其包含在 GET 中
- 取消了如果有 Cookie 记录则自动跳转的逻辑，而改为如果 Accounts 本地有用户之前登录其它服务或访问 Accounts Center 时产生的 Cookie 记录，则询问用户是否用此账户继续登录
- 在 getInfo 中，自动从 URL 中 获取来自 Accounts Center 的 SessionID 参数并保存入接入 nmServices（包括 Accounts 的 info 页面）的 Cookie

### 其它
- 提高系统的稳定性
- 优化系统的流畅度

--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
 					<t data-i18n="recoMe"></t>
 				</label><button id="login" data-i18n="login"></button></but>
 		</form>
+		<div id="useCurrentToLogBox">
+			<button id="useCurrentToLogButton"></button>
+		</div>
 		<p id="info"></p>
 		<p>
 			<t data-i18n="haveNoAccount0"></t>
@@ -44,8 +47,8 @@
 			<t data-i18n="forgetPW0"></t>
 			<a id="resetPWA" target="_blank" href="reset_password.html" data-i18n="forgetPW1"></a>
 			<br />
-			<t data-i18n="ifCantLogin0"></t>
-			<a id="showHelp" target="_self" href="javascript:alert(`<h2 style='text-align:left;display:block;line-height: 1.6;font-size: 21px;padding-bottom: 7px;'data-i18n='cantLog.h'></h2><t style='text-align:left;display:block' data-i18n='cantLog.0'></t><t style='text-align:left;display:block' data-i18n='cantLog.1'></t><t style='text-align:left;display:block' data-i18n='cantLog.2'></t><t style='text-align:left;display:block' data-i18n='cantLog.3'></t></a><t style='text-align:left;display:block' data-i18n='cantLog.4'></t><t style='text-align:left;display:block' data-i18n='cantLog.5'></t><t style='text-align:left;display:block' data-i18n='cantLog.6'></t><t style='text-align:left;display:block' data-i18n='cantLog.7'></t><img src='https://ci.cncn3.cn/8ea0f6a85e60f56c461159a059174779.md.jpg' /><t style='text-align:left;display:block' data-i18n='cantLog.8'></t><a href='safari.php' target='_blank'></a><t style='text-align:left;display:block' data-i18n='cantLog.9'></t><t style='text-align:left;display:block' data-i18n='cantLog.10'></t><t style='text-align:left;display:block' data-i18n='cantLog.11'></t>`);" data-i18n="ifCantLogin1"></a>
+			<!-- <t data-i18n="ifCantLogin0"></t>
+			<a id="showHelp" target="_self" href="javascript:alert(`<h2 style='text-align:left;display:block;line-height: 1.6;font-size: 21px;padding-bottom: 7px;'data-i18n='cantLog.h'></h2><t style='text-align:left;display:block' data-i18n='cantLog.0'></t><t style='text-align:left;display:block' data-i18n='cantLog.1'></t><t style='text-align:left;display:block' data-i18n='cantLog.2'></t><t style='text-align:left;display:block' data-i18n='cantLog.3'></t></a><t style='text-align:left;display:block' data-i18n='cantLog.4'></t><t style='text-align:left;display:block' data-i18n='cantLog.5'></t><t style='text-align:left;display:block' data-i18n='cantLog.6'></t><t style='text-align:left;display:block' data-i18n='cantLog.7'></t><img src='https://ci.cncn3.cn/8ea0f6a85e60f56c461159a059174779.md.jpg' /><t style='text-align:left;display:block' data-i18n='cantLog.8'></t><a href='safari.php' target='_blank'></a><t style='text-align:left;display:block' data-i18n='cantLog.9'></t><t style='text-align:left;display:block' data-i18n='cantLog.10'></t><t style='text-align:left;display:block' data-i18n='cantLog.11'></t>`);" data-i18n="ifCantLogin1"></a> -->
 		</p>
 
 	</div>
