## 2021.07.30   ### 新功能 - 新增 uid 显示  ### 其它 - 提高系统的稳定性   - 优化系统的流畅度
## 2021.07.30
### 新功能
- 新增 uid 显示

### 其它
- 提高系统的稳定性
- 优化系统的流畅度

--- a/info.html
+++ b/info.html
@@ -36,6 +36,10 @@
 				<table id="userInfo" border="0">
 					<tbody>
 						<tr>
+							<td class="left" data-i18n="info.t.uid">UID</td>
+							<td class="right"><input id="tUID" readonly></td>
+						</tr>
+						<tr>
 							<td class="left" data-i18n="info.t.nick"></td>
 							<td class="right"><input id="tNick" readonly></td>
 						</tr>
