[Fix] 解决了一些已知问题
- 优化对 focus-wisible 对象的 outline 显示
- 修正部分文本未被本地化的问题
- 修正部分对象无法通过键盘访问的问题

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<recap>
 				<div class="g-recaptcha" data-sitekey="6LcKtjkaAAAAAByRsaSli3V8uteOBKpX6oHDLpeq" id="verBox"></div>
 			</recap>
-			<but><label for="recoMe"><input id="recoMe" type="checkbox"><i></i>
+			<but><label for="recoMe" tabindex="0" onkeydown="divClick(this, event)"><input id="recoMe" type="checkbox"><i></i>
 					<t data-i18n="recoMe"></t>
 				</label><button id="login" data-i18n="login"></button></but>
 		</form>
