--- a/reg.html
+++ b/reg.html
@@ -38,7 +38,7 @@
 			<recap>
 				<div class="g-recaptcha" data-sitekey="6LcKtjkaAAAAAByRsaSli3V8uteOBKpX6oHDLpeq"></div>
 			</recap>
-			<but><label for="readNeeds"><input id="readNeeds" type="checkbox"><i></i>
+			<but><label for="readNeeds" tabindex="0" onkeydown="divClick(this, event)"><input id="readNeeds" type="checkbox"><i></i>
 					<t data-i18n="readNeeds"></t>
 				</label><a href="https://nmteam.ml/legal/network-service-protocol.html"
 					data-i18n="network-service-protocol" target="_blank"></a>
