--- a/info.html
+++ b/info.html
@@ -22,7 +22,8 @@
 			<t data-i18n="info.h1"></t>
 		</h1>
 		<div id="userHead">
-			<i id="avatar" onclick="openO('changeAvatar');"></i>
+			<i id="avatar" onclick="openO('changeAvatar');" title="Click to edit your avatar" tabindex="0"
+				onkeydown="divClick(this, event)"></i>
 			<p id="nick"></p>
 			<p>
 				<t data-i18n="info.user"></t>
@@ -32,7 +33,8 @@
 		</div>
 		<div id="operates">
 			<div class="infoDiv" id="main" open="true">
-				<h2>用户信息<button onclick="changeInfo();" data-i18n="info.changeInfo"></button></h2>
+				<h2><span data-i18n="info.infoName"></span><button onclick="changeInfo();"
+						data-i18n="info.changeInfo"></button></h2>
 				<table id="userInfo" border="0">
 					<tbody>
 						<tr>
@@ -61,7 +63,7 @@
 				<button id="changePasswordB" onclick="openO('Password');" data-i18n="info.changePassword"></button>
 			</div>
 			<div class="infoDiv" id="Password">
-				<h2>修改密码</h2>
+				<h2 data-i18n="info.p.name"></h2>
 				<table id="userInfo" border="0">
 					<tbody>
 						<tr>
@@ -82,12 +84,14 @@
 				<button onclick="openO('main');" data-i18n="info.close"></button>
 			</div>
 			<div class="infoDiv" id="changeAvatar">
-				<h2>设置头像</h2>
+				<h2 data-i18n="changeavatar.name"></h2>
 				<t data-i18n="changeavatar.tip0"></t><br />
 				<t data-i18n="changeavatar.tip1"></t><br />
-				<t data-i18n="changeavatar.tip2"></t> <a href="https://img.cncn3.cn?from=nmteam" target="_blank">img.cncn3.cn</a><br />
+				<t data-i18n="changeavatar.tip2"></t> <a href="https://img.cncn3.cn?from=nmteam"
+					target="_blank">img.cncn3.cn</a><br />
 				<input id="avatarURL" placeholder="https://">
-				<t data-i18n="changeavatar.tip3"></t> <button onclick="uploadAvatar();" data-i18n="changeavatar.uploadbutton"></button><br />
+				<t data-i18n="changeavatar.tip3"></t> <button onclick="uploadAvatar();"
+					data-i18n="changeavatar.uploadbutton"></button><br />
 				<button onclick="changeAvatar();" data-i18n="info.changeAvatar"></button>
 				<button onclick="openO('main');" data-i18n="info.close"></button>
 			</div>
