[Upd] 解决了一些已知问题

--- a/reg.html
+++ b/reg.html
@@ -24,7 +24,7 @@
 		<h2 id="nameBox"></h2>
 		<form action="javascript:register();">
 			<label for="uname">
-				<t data-i18n="name"></t><input id="uname">
+				<t data-i18n="name"></t><input id="uname" autofocus>
 			</label>
 			<label for="email">
 				<t data-i18n="email"></t><input id="email">
