--- a/reset_password.html
+++ b/reset_password.html
@@ -22,7 +22,7 @@
 			</h1>
 			<h2 id="nameBox" data-i18n="reseth2"></h2>
 			<label for="email">
-				<t data-i18n="email"></t><input id="email">
+				<t data-i18n="email"></t><input id="email" autofocus>
 			</label>
 			<recap>
 				<div class="g-recaptcha" data-sitekey="6LcKtjkaAAAAAByRsaSli3V8uteOBKpX6oHDLpeq" id="verBox"></div>
