--- a/reset_password_set.html
+++ b/reset_password_set.html
@@ -22,7 +22,7 @@
 			</h1>
 			<h2 id="nameBox" data-i18n="resetnh2"></h2>
 			<label for="pass">
-				<t data-i18n="password"></t><input id="pass" type="password">
+				<t data-i18n="password"></t><input id="pass" type="password" autofocus>
 			</label>
 			<label for="pass2">
 				<t data-i18n="passwordAgain"></t><input id="pass2" type="password">
