--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 		<h2 id="nameBox"></h2>
 		<form action="javascript:login();">
 			<label for="uname">
-				<t data-i18n="name"></t><input id="uname">
+				<t data-i18n="name"></t><input id="uname" autofocus>
 			</label>
 			<label for="pass">
 				<t data-i18n="password"></t><input id="pass" type="password">
