--- a/activation.html
+++ b/activation.html
@@ -15,6 +15,7 @@
 
 <body>
 	<div id="bodybg"></div>
+	<div id="msgBoxCover"></div>
 	<div class="logBox">
 		<form action="javascript:">
 			<h1><img src="https://logos.nmteam.agou.im/nmTeam/logo@32.png">
