--- a/reg.html
+++ b/reg.html
@@ -40,9 +40,9 @@
 			</recap>
 			<but><label for="readNeeds" tabindex="0" onkeydown="divClick(this, event)"><input id="readNeeds" type="checkbox"><i></i>
 					<t data-i18n="readNeeds"></t>
-				</label><a href="https://nmteam.ml/legal/network-service-protocol.html"
+				</label><a href="https://nmteam.xyz/legal/network-service-protocol.html"
 					data-i18n="network-service-protocol" target="_blank"></a>
-				<t data-i18n="readNeeds2"></t><a href="https://nmteam.ml/legal/privacy-policy.html"
+				<t data-i18n="readNeeds2"></t><a href="https://nmteam.xyz/legal/privacy-policy.html"
 					data-i18n="privacy-policy" target="_blank"></a>
 			</but>
 			<but><button id="register" data-i18n="register"></button></but>
