[Upd] 更新了头像上传的相关提示

--- a/info.html
+++ b/info.html
@@ -90,7 +90,8 @@
 				<t data-i18n="changeavatar.tip0_1"></t><br />
 				<input type="file" title="Please upload a photo" id="avatar_imageInput" accept="image/*"
 					data-i18n="changeavatar.uploadbutton">
-				<button onclick="openO('main');" data-i18n="changeavatar.cancel"></button>
+				<button onclick="openO('main');" data-i18n="changeavatar.cancel"></button><br /><br />
+				<small><t data-i18n="changeavatar.tip0_2"></t></small><br />
 			</div>
 			<div class="infoDiv" id="changeAvatar_1">
 				<h2 data-i18n="changeavatar.crop"></h2>
