[Fix] 修复描述文本错误

--- a/info.html
+++ b/info.html
@@ -104,8 +104,8 @@
 					<button onclick="cropper.move(0,-10)" title="Down" data-i18n="changeavatar.move.down"></button>
 					<button onclick="cropper.move(10,0)" title="Left" data-i18n="changeavatar.move.left"></button>
 					<button onclick="cropper.move(-10,0)" title="Right" data-i18n="changeavatar.move.right"></button>
-					<button onclick="cropper.zoom(0.1)" title="Up" data-i18n="changeavatar.move.rp"></button>
-					<button onclick="cropper.zoom(-0.1)" title="Up" data-i18n="changeavatar.move.rs"></button>
+					<button onclick="cropper.zoom(0.1)" title="Zoom In" data-i18n="changeavatar.move.rp"></button>
+					<button onclick="cropper.zoom(-0.1)" title="Zoom Out" data-i18n="changeavatar.move.rs"></button>
 				</div>
 				<button onclick="openO('main');" data-i18n="changeavatar.cancel"></button>
 				<button onclick="changeAvatar();" data-i18n="changeavatar.confirm_crop" style="float: right;"></button>
