[Upd] icon link

--- a/activation.html
+++ b/activation.html
@@ -18,7 +18,7 @@
 	<div id="msgBoxCover"></div>
 	<div class="logBox">
 		<form action="javascript:">
-			<h1><img src="https://logos.nmteam.agou.im/nmTeam/logo@32.png">
+			<h1><img src="https://websiteres.nmteam.xyz/producticon/nmTeam/logo@32.png/nmTeam/logo@32.png">
 				<t data-i18n="activationh"></t>
 			</h1>
 			<center>
