--- a/info.html
+++ b/info.html
@@ -19,7 +19,7 @@
 	<div id="msgBoxCover"></div>
 	<div class="logBox full">
 
-		<h1><img src="https://logos.nmteam.agou.im/nmTeam/logo@32.png">
+		<h1><img src="https://websiteres.nmteam.xyz/producticon/nmTeam/logo@32.png/nmTeam/logo@32.png">
 			<t data-i18n="info.h1"></t>
 		</h1>
 		<div id="userHead">
