[Fix] Made an error 😅

--- a/reg.html
+++ b/reg.html
@@ -18,7 +18,7 @@
 	<div id="msgBoxCover"></div>
 	<div class="logBox">
 
-		<h1><img src="https://websiteres.nmteam.xyz/producticon/nmTeam/logo@32.png/nmTeam/logo@32.png">
+		<h1><img src="https://websiteres.nmteam.xyz/producticon/nmTeam/logo@32.png">
 			<t data-i18n="registerh"></t>
 		</h1>
 		<h2 id="nameBox"></h2>
