--- a/reset_password.html
+++ b/reset_password.html
@@ -18,7 +18,7 @@
 	<div id="msgBoxCover"></div>
 	<div class="logBox">
 		<form action="javascript:sendResetEmail();">
-			<h1><img src="https://websiteres.nmteam.xyz/producticon/nmTeam/logo@32.png/nmTeam/logo@32.png">
+			<h1><img src="https://websiteres.nmteam.xyz/producticon/nmTeam/logo@32.png">
 				<t data-i18n="reseth"></t>
 			</h1>
 			<h2 id="nameBox" data-i18n="reseth2"></h2>
